# yummy_cache_batch

./: .gitignore  README.md
yummy_cache_batch/: Cargo.toml
yummy_cache_batch/configs/: cache_list.toml  cache_list_dev.toml  index_list.toml
yummy_cache_batch/src/: common.rs  main.rs
yummy_cache_batch/src/configuration/: cache_schedule_config.rs  env_config.rs  mod.rs  system_config.rs
yummy_cache_batch/src/controller/: main_controller.rs  mod.rs
yummy_cache_batch/src/entity/: brand_tbl.rs  elastic_index_info_tbl.rs  location_city_tbl.rs  location_county_tbl.rs  location_district_tbl.rs  migrations.rs  mod.rs  prelude.rs  recommend_tbl.rs  store.rs  store_location_info_tbl.rs  store_old.rs  store_recommend_tbl.rs  store_type_link_tbl.rs  store_type_major.rs  store_type_sub.rs  user_auth_tbl.rs  user_detail_tbl.rs  user_tbl.rs  users.rs  zero_possible_market.rs  zero_possible_market_backup.rs
yummy_cache_batch/src/models/: location_city.rs  location_county.rs  location_district.rs  mod.rs  store_type_major.rs  store_type_sub.rs
yummy_cache_batch/src/repository/: mod.rs  mysql_repository.rs  redis_repository.rs
yummy_cache_batch/src/services/: mod.rs  query_service.rs  redis_service.rs
yummy_cache_batch/src/utils_module/: io_utils.rs  mod.rs  time_utils.rs
