[package]
name = "yummy_cache_batch"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] } 
redis = { version = "0.29.1", features = ["tokio-comp", "cluster-async"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
flexi_logger = "0.27.4"
log = "0.4.20"
chrono = "0.4.31"
chrono-tz = "0.9.0"
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
getset = "0.1.2"
derive-new = "0.6.0"
percent-encoding = "2.3.1"
futures = "0.3.30"
once_cell = "1.19.0"
regex = "1.10.5"
num-format = "0.4.4"
lazy_static = "1.5.0"
async-trait = "0.1.83"
mysql_async = "0.34.1"
sea-orm = { version = "1.1.5", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
strsim = "0.11.1"
rayon = "1.10.0"
http = "1.2.0"
cron = "0.13.0"
toml = "0.8.19"
bigdecimal = "0.4.7"
